--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
+						<!--<div class="logo">
 							<span class="icon fa-gem"></span>
-						</div>
+						</div>-->
+						
 						<div class="content">
 							<div class="inner">
 								<h1>Protopica</h1>
@@ -28,11 +29,12 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="https://instagram.com/protopica.world">Contact</a></li>
+								<!--<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -340,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Copyright 2024 Protopica</p>
 					</footer>
 
 			</div>
