--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Protopica</h1>
-								<p>Blending art and tech, Protopica explores the universal concept of home and the fluidity of time with projects aiming at preserving cultural heritage.</p>
+								<p>"Protopica is a place where emerging tech meets social consciousness to drive positive change."</p>
 							</div>
 						</div>
 						<nav>
