--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Protopica</h1>
-								<p>"Protopica is a place where emerging tech meets social consciousness to drive positive change."</p>
+								<p>"A community driving positive change through emerging technologies & cultural insight."</p>
 							</div>
 						</div>
 						<nav>
