--- a/new/index.html
+++ b/new/index.html
@@ -632,7 +632,7 @@
                                     <BR/>
                                     We are tech innovators who equip our partners with the cultural fluency and communication skills to captivate diverse audiences, transforming complex ideas into compelling narratives that resonate across communities.
                                     <BR/><BR/>
-                                    Credits: TED, OpenAI, Meta, Runway ML, SXSW, VIFF, BZRP and more.
+                                    Credits: TED, OpenAI, Meta, Runway ML, SXSW, VIFF, Coachella, Nike, Jordan, Sole Dubai, NFT Now, BZRP and more.
                                 </div>
                             </div>
                         </div>
