--- a/new/index.html
+++ b/new/index.html
@@ -415,8 +415,9 @@
                                     </div>
                                     -->
                                     <h2><a href="#">Sora Short Film</a></h2>
-                                    <p>Manuel Sainsily and Will Selviz co-directed their first short film "Protopica" using Sora in private early access. It's OpenAI's latest AI model that can create realistic and imaginative scenes from text instructions.</p>
-                                    
+                                    <p>
+                                        Manuel Sainsily and Will Selviz co-directed their first short film "Protopica" using Sora, OpenAI's latest AI model that can create realistic and imaginative scenes from text instructions. This was made possible through their private early access.    
+                                    </p>
                                     
                                     <div class="btn-box">
                                         <a href="https://instagram.com/protopica.world" target="_blank">Watch Now <span class="icon-chevron"></span></a>
@@ -584,9 +585,11 @@
                                 <div class="gallery-one__single-img">
                                     <div class="inner">
                                         <img src="assets/images/gallery/talk.gif" alt="#">
+                                        <!-- (Off) Button
                                         <div class="btn-box">
                                             <a href="#"><span class="icon-diagonal-arrow2"></span></a>
                                         </div>
+                                        -->
                                     </div>
                                 </div>
                             </div>
@@ -615,9 +618,11 @@
                                 <div class="gallery-one__single-img">
                                     <div class="inner">
                                         <img src="assets/images/gallery/exp.gif" alt="#">
-                                        <div class="btn-box">
+                                        <!-- (Off) Button
+                                         <div class="btn-box">
                                             <a href="#"><span class="icon-diagonal-arrow2"></span></a>
                                         </div>
+                                        -->
                                     </div>
                                 </div>
                             </div>
@@ -644,9 +649,11 @@
                                 <div class="gallery-one__single-img">
                                     <div class="inner">
                                         <img src="assets/images/gallery/edu.gif" alt="#">
-                                        <div class="btn-box">
+                                        <!-- (Off) Button
+                                         <div class="btn-box">
                                             <a href="#"><span class="icon-diagonal-arrow2"></span></a>
                                         </div>
+                                        -->
                                     </div>
                                 </div>
                             </div>
