--- a/new/index.html
+++ b/new/index.html
@@ -416,7 +416,7 @@
                                     -->
                                     <h2><a href="#">Sora Short Film</a></h2>
                                     <p>
-                                        Manuel Sainsily and Will Selviz co-directed their first short film "Protopica" using Sora, OpenAI's latest AI model that can create realistic and imaginative scenes from text instructions. This was made possible through their private early access.    
+                                        Manuel Sainsily and Will Selviz co-directed their first short film, "Protopica," using Sora, OpenAI's latest AI model that can create realistic and imaginative scenes from text instructions. This was made possible through their private early access.    
                                     </p>
                                     
                                     <div class="btn-box">
