--- a/new/index.html
+++ b/new/index.html
@@ -1489,7 +1489,7 @@
 
                         <!-- Copyright -->
                         <div class="footer-one__copyright">
-                            <p>Copyright © MMXXIV - All Rights Reserved.</p>
+                            <p>Copyright © Protopica, 2024 - All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
