cc email & tagline space

--- a/new/index.html
+++ b/new/index.html
@@ -338,9 +338,9 @@
                                     <span>PROTOPICA.</span>
                                 -->
                                 
-                                A community driving positive<br/>
-                                change through emerging<br/>
-                                technologies & cultural insight.&nbsp; <br/>
+                                A community driving positive&nbsp;<br/>
+                                change through emerging&nbsp;<br/>
+                                technologies & cultural insight.<br/>
                                
                             </h2>
                         </div>
@@ -692,9 +692,7 @@
                                 <div class="btn-box">
                                      <a class="thm-btn" href="mailto:hello@protopica.com
                                     ?subject=Protopica%20Website%20Contact%20Form
-                                    &body=Hi%20Manu%20and%20Will,%20
-                                    &cc=williamselviz+protopica@gmail.com
-                                    ">
+                                    &body=Hi%20Manu%20and%20Will,%20">
                                         <span class="txt">Message us</span>
                                         <span class="bdrl"></span>
                                         <span class="bdrr"></span>
