--- a/new/index.html
+++ b/new/index.html
@@ -459,7 +459,7 @@
                                         <p class="tg-element-title">Start With Why</p>
                                         <div class="border-box"></div>
                                     </div>
-                                    <h2 class="sec-title__title tg-element-title">Brand Ethos
+                                    <h2 class="sec-title__title tg-element-title">Ethos
                                     </h2>
                                 </div>
 
