--- a/new/index.html
+++ b/new/index.html
@@ -566,15 +566,15 @@
                         
             </section>
 
-            <!-- Past Works -->
+            <!-- Areas of Focus -->
             <section class="gallery-one">
                 <div class="container">
                     <div class="sec-title tg-heading-subheading animation-style2">
                         <div class="sec-title__tagline">
-                            <p class="tg-element-title">Projects</p>
+                            <p class="tg-element-title">Areas of Focus</p>
                             <div class="border-box"></div>
                         </div>
-                        <h2 class="sec-title__title tg-element-title">Past Works
+                        <h2 class="sec-title__title tg-element-title">Three Pillars
                         </h2>
                     </div>
                     <div class="row">
