--- a/new/index.html
+++ b/new/index.html
@@ -467,9 +467,9 @@
                                     <p>
                                     Protopica is a community driving positive change through emerging technologies and cultural insight.
                                     <br><br>
-                                    Our mission advances with intentionality—inspiring yet practical, futuristic yet grounded. It resonates strongly with those seeking innovative, thoughtful, purpose-driven solutions. We bring unique experiences to life by masterfully blending cultural insights with technological prowess. It's about creating lasting value through our deep understanding of how technology and culture intertwine.
+                                    Our mission advances with intentionality—inspiring yet practical, futuristic yet grounded. It resonates strongly with those seeking innovative, thoughtful, purpose-driven solutions. We bring unique experiences to life by masterfully blending digital prowess with cultural awareness. Our objective is to create lasting value through our deep understanding of how these elements intertwine.
                                     <br><br>
-                                    At our core, we are global citizens committed to enhancing our shared world. Protopica leverages cutting-edge digital capabilities to propel progress and leave a brighter, more equitable legacy.
+                                    At our core, we are global citizens committed to enhancing our shared world. Protopica leverages cutting-edge capabilities to propel progress and leave a brighter, more equitable legacy.
                                     </p>
                                 </div>
                             </div>
