manu bio update

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                                             <img src="assets/images/team/portrait-manu.png" alt="#">
                                                             <div class="overlay-content">
                                                                 <h2><a href="https://manu.vision">Manuel Sainsily</a></h2>
-                                                                <p>TED Speaker, McGill University XR Instructor, Mozilla Rise25 Artist Honoree</p>
+                                                                <p>TED Speaker, XR Instructor at McGill University, Mozilla Rise25 Artist Honoree</p>
                                                             </div>
                                                         </div>
                                                     </div>
