ig icon link update

--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
 
                         <div class="footer-one__social-links">
                             <ul>
-                                <li><a href="#"><span class="icon-instagram"></span></a></li>
+                                <li><a href="instagram.com/protopica.world"><span class="icon-instagram"></span></a></li>
                                 <li></li>
                             </ul>
                         </div>
