--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <div class="col-xl-5">
                                 <div class="team-details__top-left">
                                     <div class="img-box">
-                                        <img src="assets/images/team/portrait-manu.png" alt="">
+                                        <img src="assets/images/team/portrait-manu.gif" alt="">
                                     </div>
                                     <div class="social-links">
                                         <ul>
@@ -250,7 +250,7 @@
                             <div class="col-xl-5">
                                 <div class="team-details__top-left">
                                     <div class="img-box">
-                                        <img src="assets/images/team/portrait-will.png" alt="">
+                                        <img src="assets/images/team/portrait-will.gif" alt="">
                                     </div>
                                     <div class="social-links">
                                         <ul>
