--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                                 <div class="border-box"></div>
                             </div>
                             <h2 class="sec-title__title tg-element-title">                          
-                                A community driving positive&nbsp;<br/>
-                                change through emerging&nbsp;<br/>
-                                technologies & cultural insight.<br/>
+                                Driving positive change&nbsp;<br/>
+                                through emerging technologies&nbsp;<br/>
+                                and cultural insights.<br/>
                             </h2>
                         </div>
 
@@ -121,7 +121,7 @@
                                 </div>
                                 
                                 <div class="services-one__left-content-text">
-                                    Manuel Sainsily and Will Selviz co-directed their first short film, "Protopica," using Sora, OpenAI's generative video model during its early private alpha. Released in the summer of 2024, the film garnered over half a million views online ahead of Sora’s public release in December. It was later selected from over 300 films worldwide for "Sora Selects" and screened in NYC, celebrating their work as filmmakers, educators, and multidisciplinary artists. 
+                                    <b>Manuel Sainsily & Will Selviz</b> co-directed their first short film, <i>"Protopica"</i> using Sora, OpenAI's generative video model during its early private alpha. Released in the summer of 2024, the film garnered over half a million views online ahead of Sora’s public release in December. It was later selected from over 300 films worldwide for <i>"Sora Selects"</i> and screened in NYC, celebrating their work as filmmakers, educators, and multidisciplinary artists. 
                                     <br>
                                     Protopica explores future possibilities and forgotten pasts, fostering belonging and empathy by asking, “What if our lives result from choices made long before our existence?”
                                     <br><br>
@@ -166,12 +166,12 @@
                                 </div>
                                 
                                 <div class="services-one__left-content-text">
-                                    Protopica is a community driving positive change through emerging technologies and cultural insight.
+                                    <b>Protopica</b> is a community committed to driving positive change through emerging technologies and cultural insights.
                                     <br/>
-                                    Our mission advances with intentionality—inspiring yet practical, futuristic yet grounded. It resonates strongly with those seeking innovative, thoughtful, purpose-driven solutions. We bring unique experiences to life by masterfully blending digital prowess with cultural awareness. Our objective is to create lasting value through our deep understanding of how these elements intertwine.
+                                    Our mission is guided by intentionality—innovative yet practical, futuristic yet grounded. We resonate with those seeking thoughtful, purpose-driven solutions by seamlessly blending digital expertise with cultural awareness. Through this unique fusion, we bring transformative experiences to life and create lasting value by deeply understanding how these elements intersect.
                                     <br/>
-                                    At our core, we are global citizens committed to enhancing our shared world. Protopica leverages cutting-edge capabilities to propel progress and leave a brighter, more equitable legacy.
-                                </div>
+                                    At our core, we are global citizens dedicated to improving our shared world. Protopica harnesses cutting-edge capabilities to advance progress and leave behind a brighter, more equitable legacy.
+                                    </div>
                             </div>
                         </div>
             </section>
@@ -680,7 +680,7 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
 
                         <!-- Copyright -->
                         <div class="footer-one__copyright">
-                            <p>Copyright © Protopica, 2024 - All Rights Reserved.</p>
+                            <p>Copyright © Protopica, 2025 - All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
