mobile alignment of metrics
500k instead of 500k+

--- a/index.html
+++ b/index.html
@@ -766,14 +766,13 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
                                     </div>
                                     <div class="counter-box">
                                         <h2><span class="odometer" data-count="500">00</span> <span class="k">k</span>
-                                            <span class="plus icon-plus-1"></span>
                                         </h2>
                                     </div>
                                 </div>
 
                                 <div class="counter-two__single-bottom">
-                                    <p>Views across platforms since
-                                        <br/>the release in July 2024</p>
+                                    <p>Views across platforms 
+                                        <br/>(and counting)</p>
                                 </div>
                             </div>
                         </div>
