repositioning of metrics subtitles

--- a/index.html
+++ b/index.html
@@ -793,8 +793,8 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
                                 </div>
 
                                 <div class="counter-two__single-bottom">
-                                    <p>Video clips generated with Sora
-                                        <br/>from pure text prompts</p>
+                                    <p>Video clips generated with 
+                                        <br/>Sora from text prompts</p>
                                 </div>
                             </div>
                         </div>
@@ -815,8 +815,8 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
                                 </div>
 
                                 <div class="counter-two__single-bottom">
-                                    <p>Brain waves captured using
-                                        <br/>EEG through our exhibitions</p>
+                                    <p>Brain waves captured
+                                        <br/>using EEG devices</p>
                                 </div>
                             </div>
                         </div>
