from ouR community

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
                             <p class="tg-element-title">Testimonials</p>
                             <div class="border-box"></div>
                         </div>
-                        <h2 class="sec-title__title tg-element-title">From Out Community
+                        <h2 class="sec-title__title tg-element-title">From Our Community
                         </h2>
                     </div>
 
