--- a/index.html
+++ b/index.html
@@ -593,6 +593,26 @@ Will’s expertise brings tech adoption for industry giants like Nike, Meta, NBA
                                             src="assets/images/testimonial/testimonials-v2-img1.png" alt="#"></div>
                                     -->
                                 </li>
+
+                                <li class="testimonials-two__right-list-item wow animated fadeInRight"
+                                    data-wow-delay="1.0s">
+                                    <div class="testimonials-two__right-list-left">
+                                        <div class="count-box">10.</div>
+                                        <div class="title-box">
+                                            <h2><a href="#">SXSW 2025</a></h2>
+                                            <p>03.2025</p>
+                                        </div>
+                                    </div>
+
+                                    <div class=" testimonials-two__right-list-right">
+                                        <p>Telefilm Canada and its partners selected Protopica to be showcased alongside 12 companies at the <a style="color: #3498db; text-decoration: none;" target="_blank" href="https://www.sxsw.com/">XR Experience Exhibition</a>, which houses break-through XR and AI experiences from around the world.
+                                        </p>
+                                    </div>
+                                     <!--Floating image
+                                    <div class="testimonials-two__img"><img class="testimonials-two__img-hover"
+                                            src="assets/images/testimonial/testimonials-v2-img1.png" alt="#"></div>
+                                    -->
+                                </li>
                             </ul>
 
                         </div>
